More slidesL Colpitts

--- a/slides/slides_atu.tex
+++ b/slides/slides_atu.tex
@@ -1458,6 +1458,70 @@ $p_{leW}$.
     \label{atu:f:lor_q}
   \end{figure}
 
+  \begin{figure}
+    \PicDouble{../p5/p/cha/lor/lor_qx2_tau-p_aq_sd.png}{../p5/p/cha/lor/lor_qx2_tau-p_tau_sd.png}
+    \caption{Залежності $\sigma_{q}(a_q)$ (a) і $\sigma_{q}(\tau_q)$ (b) для системи Лоренца, критерій $q_{x^2}$}
+    \label{atu:f:lor_qx2_tau}
+  \end{figure}
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{~}
+  %\framesubtitle{}
+
+  \begin{figure}[htb!]
+    \PicDoubleS{../p5/p/cha/lor/Fl2nlosdlcA/Fl2nlosdlcA-p_xz_1_wp009.png}{../p5/p/cha/lor/Fl2nlosdlcA/Fl2nlosdlcA-p_xz_0_wp009.png}
+    \caption{Процес ідентифікації параметра ``$r$'' системи Лоренца групою методів Fl2nlosdlcA.$q_{x^2} $ за умов~(\ref{atu:eq:po_t_sign})~(a) і (\ref{atu:eq:po_t_sin})~(b)}
+    \label{atu:f:lor_id_Fl2nlosdlcA_wp009}
+  \end{figure}
+
+  \begin{figure}[htb!]
+    \PicDoubleS{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qy2-p_t_pi_sign.png}{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qy2-p_t_pz_sign.png}
+    \caption{Процес ідентифікації параметра ``$r$'' системи Лоренца групою методів ql3ruonAAF.$q_{x^2} $ за умови~(\ref{atu:eq:po_t_sign}): динаміка агентів~(a) та $p_\mathrm{id}$~(b)}
+    \label{atu:f:lor_id_ql3ruonAAF.q_x2_sign}
+  \end{figure}
+
+
+  \begin{figure}[htb!]
+    \PicDoubleS{../p5/p/cha/lor/Fq3zlovnAAF/lor_Fq3zlovnAAF_qx2-pl_n_sign.png}{../p5/p/cha/lor/Fq3zlovnAAF/lor_Fq3zlovnAAF_qx2-p_p_sign.png}
+    \caption{Процес ідентифікації параметра ``$r$'' системи Лоренца групою методів Fq3zlovnAAF.$q_{x^2} $ за умови~(\ref{atu:eq:po_t_sign}): динаміка агентів~(a) та $p_\mathrm{id}$~(b)}
+    \label{atu:f:lor_id_Fq3zlovnAAF.q_x2_sign}
+  \end{figure}
+
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{~}
+  %\framesubtitle{}
+
+  \Xhead{Вплив параметрів системи ідентифікації}
+
+  \begin{figure}[htb!]
+    \PicDoubleS{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qx2-p_a_q_e_sign.png}{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qx2-p_a_q_e_sin.png}
+    \caption{Залежності $\overline{e}_{r *}(a_q)$ при ідентифікації системи Лоренца групою методів ql3ruonAAF.$q_{x^2} $ при~(\ref{atu:eq:po_t_sign})~(a) і (\ref{atu:eq:po_t_sin})~(b)}
+    \label{atu:f:lor_a_q_ql3ruonAAF.q_x2}
+  \end{figure}
+
+  \begin{figure}[htb!]
+    \PicDoubleS{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qx2-p_qgamma_e_sign.png}{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qx2-p_qgamma_e_sin.png}
+    \caption{Залежності $\overline{e}_{r *}(q_\gamma)$ при ідентифікації системи Лоренца групою методів ql3ruonAAF.$q_{x^2} $ при~(\ref{atu:eq:po_t_sign})~(a) і (\ref{atu:eq:po_t_sin})~(b)}
+    \label{atu:f:lor_qg_ql3ruonAAF.q_x2}
+  \end{figure}
+
+  \begin{figure}[htb!]
+    \PicDoubleS{../p5/p/cha/lor/Fq3zlovnAAF/f_type/lor_Fq3zlovnAAF_qx2_Ft-p_qg_e_all_sign_rge.png}{../p5/p/cha/lor/Fq3zlovnAAF/f_type/lor_Fq3zlovnAAF_qx2_Ft-p_qg_e_all_sin_rge.png}
+    \caption{Сімейства залежностей $\overline{e}_{rge}(q_\gamma)$ для різних видів функцій якості при ідентифікації системи Лоренца групою методів Fq3zlovnAAF.$q_{x^2}$ при~(\ref{atu:eq:po_t_sign})~(a) і (\ref{atu:eq:po_t_sin})~(b)}
+    \label{atu:f:lor_ftype_rge}
+  \end{figure}
+
 \end{frame}
 
 
@@ -1466,6 +1530,7 @@ $p_{leW}$.
 
 \begin{frame}
   \frametitle{~}
+
 
   \Xhead{Система Лоренца: залежності критеріїв для двох параметрів}
 
@@ -1529,15 +1594,26 @@ $p_{leW}$.
 \begin{frame}
   \frametitle{~}
 
-  \Xhead{}
+  Додаткові критерії:
+  %
+  \[
+    q_{x2Oy2} = \frac{q_{x^2}}{q_{y^2}},
+    \quad
+    q_{dxOy} =
+    \frac{\overline{\dot{x}y}}{\overline{\dot{x}^2}}
+  \]
 
 \begin{figure}
-  \begin{center}
-    \includegraphics[width=0.60\textwidth]{../p5/p/cha/spr_a/sprott_a_q-p_c_x_y.png}
-  \end{center}
+  \PicDouble{../p5/p/cha/spr_a/sprott_a_q-p_c_x_y.png}{../p5/p/cha/spr_a/sprott_a_q2-p_c_x_y2.png}
   \caption{Залежності $q_{*}(c_{x_y})$ для системи (\ref{atu:eq:spr_a})}
   \label{atu:f:spr_a_q}
 \end{figure}
+
+  \begin{figure}[htb!]
+    \PicDouble{../p5/p/cha/spr_a/ql3rlWvnAAW_dxOy/sprott_a_id2-p_t_pi_ql3rlWvnAAW_sign.png}{../p5/p/cha/spr_a/ql3rlWvnAAW_dxOy/sprott_a_id2-p_t_p_ql3rlWvnAAW_sign.png}
+    \caption{Процес ідентифікації параметра ``$c_{x_y}$'' системи Sprott~A групою методів ql3rlWvnAAW.$q_{dxOy}$ за умови~(\ref{atu:eq:po_t_sign}): динаміка агентів~(a) та $p_\mathrm{id}$~(b)}
+    \label{atu:f:spr_a_id_ql3rlWvnAAW_q_dxOy_sign}
+  \end{figure}
 
 
 \end{frame}
@@ -1553,8 +1629,69 @@ $p_{leW}$.
 
 \begin{frame}
   \frametitle{~}
+  %\framesubtitle{}
 
-  \Xhead{}
+  \Xhead{Аналіз та ідентифікація фізичної реалізації системи Колпітца}
+
+  \begin{figure}[htb!]
+    \begin{center}
+      \input{../p6/p/mod/colp_scheme.pgf}
+    \end{center}
+    \caption{Електрична схема генератора Колпітца на біполярному транзисторі}
+    \label{atu:f:colp_schem}
+  \end{figure}
+
+  \begin{equation}
+    \label{atu:eq:colp_phys}
+    \begin{dcases}
+      C_1 \od{V_{1}}{t}  = I_L - I_{CE} , \\
+      L\, \od{I_L}{t} \; = V_{CC} - V_{1} - V_{2} - I_L R_C , \\
+      C_2 \od{V_{2}}{t}  = I_L - \frac{V_{2}}{R_e}.
+    \end{dcases}
+  \end{equation}
+  %
+  %
+  %\noindent
+  де
+  $V_{CC} $ --- напруга живлення,
+  $V_1 $, $ V_2 $ --- різниця потенціалів між виводами конденсаторів
+  $\mathrm{C}_1 $ і
+  $\mathrm{C}_2 $ відповідно,
+  $I_L $,
+  $I_{CE} $ --- струми котушки індуктивності і транзистора (колектор-емітер).
+
+  \begin{equation}
+    \label{atu:eq:colp}
+    \begin{cases}
+      \dot{x} = y - a F(z), \\
+      \dot{y} = c - x - by - z, \\
+      \dot{z} = y - d z.
+    \end{cases}
+  \end{equation}
+
+  \[
+    F(z) =
+      \begin{cases}{l}
+        e-1-z, & z \le e-1  \\
+        0,     & z  >  e-1
+      \end{cases}.
+  \]
+
+  \begin{equation}
+    I_c
+    = I_s \left( \exp\frac{V_{be}}{U_t N_f} - 1 \right)
+    \cdot
+    \left( 1 + \frac{V_{ce}}{V_{af}}\right),
+    \label{atu:eq:bjt_model_sub}
+  \end{equation}
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{~}
 
   Програмно-апаратна складова комплексу реалізована на
   мікроконтролерах STM32 (ARM Cortex M4F). Використовувалася як власна
@@ -1562,11 +1699,77 @@ $p_{leW}$.
   допоміжні елементи.
 
   \begin{figure}[ht!]
-    \centerline{\includegraphics[width=90\TW]{../p6/p/colp_stand.png} }
+    \centerline{\includegraphics[width=80\TW]{../p6/p/colp_stand.png} }
     \caption{Апаратно-програмний комплекс при роботі з генератором Колпітца}
     \label{atu:colp_stand}
   \end{figure}
 
+  \vspace{-5ex}
+
+  \begin{figure}[htb!]
+    \PicDoubleS{../p6/p/r/v1iv2_030000.png}{../p6/p/r/f_030000.png}
+    \caption{Аттрактор~(a) і спектр~(b) реального генератора Колпітца при $R_c = \SI{30}{\ohm} $}
+    \label{atu:f:colp_r_attr_f_30}
+  \end{figure}
+
+  \vspace{-3ex}
+
+  \begin{figure}[htb!]
+    \PicDoubleNL{../p6/p/colp_bjt_q-p_Rc_q.png}{../p6/p/colp_q_cml.png}
+    \parbox[t]{\DDP} {
+      \caption{Критерії ідентифікації для моделі системи Колпітца}
+      \label{atu:f:colp_bjt_q-p_Rc_q}
+    }
+    \hfill
+    \parbox[t]{\DDP} {
+      \caption{Порівняння залежностей критерію $q_{xz}$ реального генератора Колпітца з моделлю}
+      \label{atu:f:colp_q_cml}
+    }
+  \end{figure}
+
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{~}
+  %\framesubtitle{}
+
+  Параметри першого експерименту для генератора Колпітца
+  %
+  \begin{equation}
+    \begin{array}{c}
+      R_{c,\min} = \SI{27.0}{\ohm};
+      \;
+      R_{c,\max} = \SI{50.0}{\ohm};
+      \;
+      T_{R_c} = \SI{200}{\milli\second};
+      \\
+      R_c(t) = \SI{28.5}{\ohm} + \SI{11.5}{\ohm} \cdot \sign \sin \left(  \frac{\pi t}{T_{R_c}}  \right)
+    \end{array}
+    \label{atu:eq:colp_test1_cond}
+  \end{equation}
+
+  \begin{figure}[htb!]
+    \PicDouble{../p6/p/r/colp_real_id-p_t_pi_ql3rlWvnAAW_real_d_0.png}{../p6/p/r/colp_real_id-p_t_p_ql3rlWvnAAW_real_d_0.png}
+    \caption{Процес ідентифікації параметра $R_c$ реального генератора Колпітца за умов (\ref{atu:eq:colp_test1_cond}): динаміка агентів~(a) та $p_\mathrm{id}$~(b)}
+    \label{atu:f:colp_r_id_1}
+  \end{figure}
+
+  \begin{figure}[htb!]
+    \PicDoubleNL{../p6/p/r/colp_real_id-p_a_q_d_0.png}{../p6/p/r/colp_real_id-p_q_gamma_d_0.png}
+    \parbox[t]{\DDP} {
+      \caption{Залежності $\overline{e} (a_q) $ при ідентифікації параметра $ R_c $ генератора Колпітца за умов \ref{atu:eq:colp_test1_cond}}
+      \label{atu:f:colp_real_id_p_a_q_d_0}
+    }
+    \hfill
+    \parbox[t]{\DDP} {
+      \caption{Залежності $ \overline{e} (q_\gamma) $ при ідентифікації параметра $ R_c $ генератора Колпітца за умов \ref{atu:eq:colp_test1_cond}}
+      \label{atu:f:colp_real_id_p_q_gamma_d_0}
+    }
+  \end{figure}
 
 
 \end{frame}
@@ -1635,6 +1838,18 @@ $p_{leW}$.
 \begin{frame}
   \frametitle{~}
   %\framesubtitle{}
+  \begin{figure}[htb!]
+    \PicDoubleNL{../p7/p/relax3d_board.jpg}{../p7/p/relax3ds_board.jpg}
+    \parbox[t]{\DDP} {
+      \caption{Схема системи з трьох пов'язаних релаксаційних генераторів на парі компліментарних транзисторів}
+      \label{atu:f:relax3d_board}
+    }
+    \hfill
+    \parbox[t]{\DDP} {
+      \caption{Схема з трьох пов'язаних релаксаційних генераторів на основі тригерів Шмідта}
+      \label{atu:f:relax3ds_board}
+    }
+  \end{figure}
 
   \Xhead{Модель систем з трьох пов'язаних релаксаційних генераторів}
 
