--- a/slides/slides_atu.tex
+++ b/slides/slides_atu.tex
@@ -185,9 +185,8 @@
 
     Науковий консультант --- д.т.н., проф. \superUa
 
-    \vfill
 
-    Дніпро --- 2018
+  %     Дніпро --- 2018
 
   \end{center}
 
@@ -307,6 +306,111 @@
 
 
 \end{frame}
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Наукова новизна}
+  %\framesubtitle{}
+
+  \Xhead{Наукова новизна}
+
+  \noindent
+  \textbf{Вперше:}
+  %
+  \begin{itemize}
+
+    \item
+      створено критерії ідентифікації нелінійних динамічних систем,
+      які, на відміну від тих, що існують, дозволяють оцінити їх стан та
+      хаотичну динаміку, а також дають підстави для створення ефективних алгоритмів
+      настроювання параметрів моделей систем ідентифікації;
+
+    \item
+      створено методи ідентифікації на підставі
+      адаптивно-пошукової парадигми з використанням ансамблю пошукових агентів,
+      які взаємодіють проміж собою, які на відміну від методів, що використовують
+      одну модель або пару моделей, значно підвищують швидкість пошуку та
+      здатні за мінімальний час  перелаштовуватися при різкій зміні параметрів, а на
+      відміну від ройових алгоритмів нові методи потребують значно меншої
+      кількості моделей та забезпечують певні гарантії пошуку;
+
+    \item
+      створено нову класифікацію систем ідентифікації динамічних систем,
+      яка, як вбирає у себе методи, що існують, так і дозволяє
+      створювати нові методи ідентифікації за рахунок
+      комбінування їх складових частин;
+
+    \item
+      визначено, що системи з сухим тертям з точки зору задачі ідентифікації
+      при певних  умовах функціонування
+      мають властивості, що поєднують їх з системами хаотичної динаміки, тобто існує
+      суттєва залежність від початкових
+      умов та характерний вид атрактору;
+
+    \item
+      запропоновано модель системи хаотичної динаміки
+      з використанням зв'язаних релаксаційних генераторів,
+      яка відрізняється від існуючих відсутністю індуктивних компонентів,
+      працездатністю при малих напругах та можливістю
+      керування частотним діапазоном у широкому інтервалі,
+      що сприяє процесу аналізу хаотичної динаміки
+      фізичного об'єкту, перевірці адекватності математичної моделі
+      та властивостей системи ідентифікації.
+  \end{itemize}
+
+
+\end{frame}
+
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{~}
+  %\framesubtitle{}
+
+  \noindent
+  \textbf{ Набуло подальший розвиток:}
+  \begin{itemize}
+
+    \item
+      методи оцінювання якості ідентифікації,
+      які на відміну від тих, що існують,
+      враховують використання множини агентів;
+
+    \item
+      підходи до адаптації параметрів систем
+      ансамблевої ідентифікації, які придатні використовувати поточну
+      інформацію від ансамблю синергірованих моделей та коригувати глобальні
+      параметри пошуку в умовах апріорної та поточної невизначеності;
+
+    \item
+      модель генератора Колпітца, яка враховує
+      більшу кількість нелінійних ефектів,
+      що забезпечує більш адекватні результати процесу
+      ідентифікації її параметрів запропонованими методами;
+  \end{itemize}
+
+
+\textbf{Практичне значення одержаних результатів.}
+Розроблені методи ідентифікації було використано
+при проектуванні, створенні, налаштовуванні параметрів
+стенду дослідження вібраційного та акустичного впливу.
+Аналіз результатів даних з цього стенду
+дав можливість вказати необхідні нелінійні властивості системи
+та діапазон параметрів, які у сукупності
+забезпечують широкосмуговий спектр коливань.
+
+Створене програмне середовище для моделювання нелінійних динамічних систем
+використовується при проведенні практичних робіт по дисциплінам
+``Моделювання систем'',
+``Сучасні системи управління'' на кафедрі інформаційних технологій
+і систем Національної металургійної академії України.
+
+\end{frame}
+
 
 % -------------------------- P1 ---------------------------------------------
 
@@ -2026,149 +2130,48 @@ $I_{i, \mathrm{leak}} $ --- струми витоку.
 
 % ----------------------------- FINAL ------------------------------------------
 
-\begin{frame}
-  \frametitle{Наукова новизна}
-  %\framesubtitle{}
-
-  \Xhead{Наукова новизна}
-
-  \noindent
-  \textbf{Вперше:}
-  %
-  \begin{itemize}
-
-    \item
-      створено критерії ідентифікації нелінійних динамічних систем,
-      які, на відміну від тих, що існують, дозволяють оцінити їх стан та
-      хаотичну динаміку, а також дають підстави для створення ефективних алгоритмів
-      настроювання параметрів моделей систем ідентифікації;
-
-    \item
-      створено методи ідентифікації на підставі
-      адаптивно-пошукової парадигми з використанням ансамблю пошукових агентів,
-      які взаємодіють проміж собою, які на відміну від методів, що використовують
-      одну модель або пару моделей, значно підвищують швидкість пошуку та
-      здатні за мінімальний час  перелаштовуватися при різкій зміні параметрів, а на
-      відміну від ройових алгоритмів нові методи потребують значно меншої
-      кількості моделей та забезпечують певні гарантії пошуку;
-
-    \item
-      створено нову класифікацію систем ідентифікації динамічних систем,
-      яка, як вбирає у себе методи, що існують, так і дозволяє
-      створювати нові методи ідентифікації за рахунок
-      комбінування їх складових частин;
-
-    \item
-      визначено, що системи з сухим тертям з точки зору задачі ідентифікації
-      при певних  умовах функціонування
-      мають властивості, що поєднують їх з системами хаотичної динаміки, тобто існує
-      суттєва залежність від початкових
-      умов та характерний вид атрактору;
-
-    \item
-      запропоновано модель системи хаотичної динаміки
-      з використанням зв'язаних релаксаційних генераторів,
-      яка відрізняється від існуючих відсутністю індуктивних компонентів,
-      працездатністю при малих напругах та можливістю
-      керування частотним діапазоном у широкому інтервалі,
-      що сприяє процесу аналізу хаотичної динаміки
-      фізичного об'єкту, перевірці адекватності математичної моделі
-      та властивостей системи ідентифікації.
-  \end{itemize}
-
-
-\end{frame}
-
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{Практическая ценность}
-  %\framesubtitle{}
-
-  \noindent
-  \textbf{ Набуло подальший розвиток:}
-  \begin{itemize}
-
-    \item
-      методи оцінювання якості ідентифікації,
-      які на відміну від тих, що існують,
-      враховують використання множини агентів;
-
-    \item
-      підходи до адаптації параметрів систем
-      ансамблевої ідентифікації, які придатні використовувати поточну
-      інформацію від ансамблю синергірованих моделей та коригувати глобальні
-      параметри пошуку в умовах апріорної та поточної невизначеності;
-
-    \item
-      модель генератора Колпітца, яка враховує
-      більшу кількість нелінійних ефектів,
-      що забезпечує більш адекватні результати процесу
-      ідентифікації її параметрів запропонованими методами;
-  \end{itemize}
-
-
-\textbf{Практичне значення одержаних результатів.}
-Розроблені методи ідентифікації було використано
-при проектуванні, створенні, налаштовуванні параметрів
-стенду дослідження вібраційного та акустичного впливу.
-Аналіз результатів даних з цього стенду
-дав можливість вказати необхідні нелінійні властивості системи
-та діапазон параметрів, які у сукупності
-забезпечують широкосмуговий спектр коливань.
-
-Створене програмне середовище для моделювання нелінійних динамічних систем
-використовується при проведенні практичних робіт по дисциплінам
-``Моделювання систем'',
-``Сучасні системи управління'' на кафедрі інформаційних технологій
-і систем Національної металургійної академії України.
-
-\end{frame}
 
 
 
 
 
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{Друковані роботи та апробація}
-  %\framesubtitle{}
-
-  \Xhead{Друковані роботи та апробація}
-
-За темою дисертаційної роботи опубліковано
-50 наукових праць. Основний зміст і результати досліджень
-викладено у 36 друкованих працях у наукових фахових виданнях, які
-рекомендовано Міністерством освіти і науки України,
-29 --- включено до інших міжнародних наукометричних баз,
-у тому числі 1 --- включено до бази Web of Science,
-13 робіт опубліковано у збірниках наукових праць та матеріалах конференцій.
-
-\smallskip
-
-%{\scriptsize
-Основные положения диссертационной работы докладывались на
-научно-практических конференциях:
-``Інформатика та системні науки'' (ІСН-2011) Полтава--2011,
-``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2011,
-``Информационные технологии в управлении сложными системами'' Днепропетровск--2011,
-``Автоматизация: проблемы, идеи, решения'' Севастополь--2011,
-``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2012,
-``Автоматизация: проблемы, идеи, решения'' Севастополь--2012,
-``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2013,
-``Автоматизация: проблемы, идеи, решения'' Севастополь--2013,
-``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2014,
-``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2015,
-``Computer Sciences and Information Technologies'' (CSIT) Lviv--2015 (Scopus),
-``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2016,
-``Data Stream Mining and Processing'' DSMP Lviv--2016 (Scopus,Web of Science).
-%} % scriptsize
-
-\end{frame}
+% % -----------------------------------------------------------------------
+%
+% \begin{frame}
+%   \frametitle{Друковані роботи та апробація}
+%   %\framesubtitle{}
+%
+%   \Xhead{Друковані роботи та апробація}
+%
+% За темою дисертаційної роботи опубліковано
+% 50 наукових праць. Основний зміст і результати досліджень
+% викладено у 36 друкованих працях у наукових фахових виданнях, які
+% рекомендовано Міністерством освіти і науки України,
+% 29 --- включено до інших міжнародних наукометричних баз,
+% у тому числі 1 --- включено до бази Web of Science,
+% 13 робіт опубліковано у збірниках наукових праць та матеріалах конференцій.
+%
+% \smallskip
+%
+% %{\scriptsize
+% Основные положения диссертационной работы докладывались на
+% научно-практических конференциях:
+% ``Інформатика та системні науки'' (ІСН-2011) Полтава--2011,
+% ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2011,
+% ``Информационные технологии в управлении сложными системами'' Днепропетровск--2011,
+% ``Автоматизация: проблемы, идеи, решения'' Севастополь--2011,
+% ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2012,
+% ``Автоматизация: проблемы, идеи, решения'' Севастополь--2012,
+% ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2013,
+% ``Автоматизация: проблемы, идеи, решения'' Севастополь--2013,
+% ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2014,
+% ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2015,
+% ``Computer Sciences and Information Technologies'' (CSIT) Lviv--2015 (Scopus),
+% ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2016,
+% ``Data Stream Mining and Processing'' DSMP Lviv--2016 (Scopus,Web of Science).
+% %} % scriptsize
+%
+% \end{frame}
 
 
 
